<?xml version="1.0"?>
<package format="2">
  <name>t_flex</name>
  <version>0.0.0</version>
  <description>The t_flex package</description>

  <maintainer email="daniel.gomez-v@mail.escuelaing.edu.co">Daniel Gómez</maintainer>
  <maintainer email="miguel.sanchez-m@mail.escuelaing.edu.co">Miguel Manchola</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamixel_controllers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>dynamixel_controllers</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>dynamixel_controllers</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
